--- a/TaskWebApp/Views/Shared/_Layout.cshtml
+++ b/TaskWebApp/Views/Shared/_Layout.cshtml
@@ -40,5 +40,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/profile-dropdown.js"></script>
+    <script src="~/Scripts/init-iframes.js"></script>
 </body>
 </html>
